ebs-backup/cfn-templates/root.yaml
AWSTemplateFormatVersion: "2010-09-09"
Description: "Root stack for the EBS Backup challenge"

Parameters:
  Environment:
    Type: String
    Description: "Environment"
    Default: "dev"

Mappings:
  RegionMap:
    us-east-1:
      AMI: "ami-09368ced5fbf0ce9e"

Resources:
  VPC:
    Type: "AWS::EC2::VPC"
    Properties:
      CidrBlock: "10.0.0.0/16"
      EnableDnsHostnames: true

  Subnet:
    Type: "AWS::EC2::Subnet"
    Properties:
      VpcId: !Ref VPC
      CidrBlock: "10.0.0.0/24"
      AvailabilityZone: !Select
        - "0"
        - !GetAZs ""

  InternetGateway:
    Type: "AWS::EC2::InternetGateway"

  AttachGateway:
    Type: "AWS::EC2::VPCGatewayAttachment"
    Properties:
      VpcId: !Ref VPC
      InternetGatewayId: !Ref InternetGateway

  RouteTable:
    Type: "AWS::EC2::RouteTable"
    Properties:
      VpcId: !Ref VPC

  Route:
    Type: "AWS::EC2::Route"
    DependsOn: "AttachGateway"
    Properties:
      RouteTableId: !Ref RouteTable
      GatewayId: !Ref InternetGateway
      DestinationCidrBlock: "0.0.0.0/0"

  SubnetRouteTableAssociation:
    Type: "AWS::EC2::SubnetRouteTableAssociation"
    Properties:
      SubnetId: !Ref Subnet
      RouteTableId: !Ref RouteTable

  SecurityGroup:
    Type: "AWS::EC2::SecurityGroup"
    Properties:
      GroupDescription: "Allow HTTP traffic"
      VpcId: !Ref VPC
      SecurityGroupIngress:
        - IpProtocol: "tcp"
          FromPort: "80"
          ToPort: "80"
          CidrIp: "0.0.0.0/0"

        - IpProtocol: "tcp"
          FromPort: "22"
          ToPort: "22"
          CidrIp: "0.0.0.0/0"

        - IpProtocol: "tcp"
          FromPort: "443"
          ToPort: "443"
          CidrIp: "0.0.0.0/0"

        - IpProtocol: "tcp"
          FromPort: "3000"
          ToPort: "3000"
          CidrIp: "0.0.0.0/0"

  EC2Instance:
    Type: "AWS::EC2::Instance"
    Metadata:
      cfn-lint:
        config:
          ignore_checks:
            - E1029
      AWS::CloudFormation::Init:
        config:
          commands:
            mount-secondary-ebs:
              command: |
                #!/bin/bash
                mkfs -t ext4 /dev/xvdb
                mkdir -p /mnt/data
                mount /dev/xvdb /mnt/data
                chown 1000:1000 /mnt/data
                echo '/dev/xvdb /mnt/data ext4 defaults,nofail 0 2' >> /etc/fstab
                git clone https://github.com/phamtrongngh/aws-challenges.git /home/ec2-user/aws-challenges
                cd /home/ec2-user/aws-challenges/ebs-backup/backend
                docker build -t app .
                docker run -d -p 3000:3000 -e REPO_FILE_PATH=/mnt/data/repo.txt -v /mnt/data:/mnt/data app
          services:
            sysvinit:
              docker:
                enabled: true
                ensureRunning: true
    Properties:
      InstanceType: "t2.micro"
      ImageId: !FindInMap
        - RegionMap
        - !Ref "AWS::Region"
        - AMI
      KeyName: "cloudformation"
      Tags:
        - Key: "Name"
          Value: "ebs-deep-dive"
      UserData:
        Fn::Base64: |
          #!/bin/bash
          yum update -y
          yum update -y aws-cfn-bootstrap
          /opt/aws/bin/cfn-init -s ${AWS::StackId} --resource EC2Instance --region ${AWS::Region} || error_exit 'Failed to run cfn-init'
          /opt/aws/bin/cfn-hup || error_exit 'Failed to start cfn-hup'
          /opt/aws/bin/cfn-signal -e $? --stack ${AWS::StackId} --resource EC2Instance --region ${AWS::Region}  

      BlockDeviceMappings:
        - DeviceName: "/dev/xvda"
          Ebs:
            VolumeSize: 8
            VolumeType: "gp2"
            DeleteOnTermination: true

        - DeviceName: "/dev/xvdb"
          Ebs:
            VolumeSize: 8
            VolumeType: "gp2"
            DeleteOnTermination: false

      NetworkInterfaces:
        - DeviceIndex: "0"
          AssociatePublicIpAddress: "true"
          DeleteOnTermination: "true"
          SubnetId: !Ref Subnet
          GroupSet:
            - !Ref SecurityGroup

Outputs:
  InstanceId:
    Value: !Ref EC2Instance
    Description: "Instance ID"

  PublicIp:
    Value: !GetAtt EC2Instance.PublicIp
    Description: "Public IP"

  PublicDnsName:
    Value: !GetAtt EC2Instance.PublicDnsName
    Description: "Public DNS"
